# bones

./: .gitignore  Cargo.toml  Makefile  README.md  VkLayer_bones.json  dist.LICENSE
config/: bones-config.toml
ftk/: bones-flatpak  bones-inject  commit.py  metadata.23.08  metadata.24.08  metadata.25.08
shaders/: constants.glsl  functions.glsl  grade_clamp.glsl  io_compute.glsl  main_fetch.glsl  main_grade.glsl  uber.vert
shaders/accessibility/: deuteranopia_simulation.glsl  protanopia_correct.glsl  protanopia_simulation.glsl  tritanopia_correct.glsl  tritanopia_simulation.glsl
shaders/anti_aliasing/: luma_edge_aa.glsl  morphological_aa.glsl  subpixel_aa.glsl
shaders/blur/: gaussian_blur.glsl  radial_blur.glsl
shaders/channel_curves/: green_channel_curve.glsl  red_channel_curve.glsl
shaders/color_balance/: trizone_color_balance.glsl
shaders/color_grading/: hermite_curves.glsl  levels_remap.glsl  lift_gamma_gain.glsl  saturation_contrast_grade.glsl  vibrance_boost.glsl
shaders/denoise/: bilateral_denoise.glsl
shaders/exposure/: linear_exposure.glsl
shaders/geometric/: center_zoom.glsl  fisheye_warp.glsl  polynomial_distort.glsl  rotate_180.glsl  rotate_270.glsl  rotate_90.glsl  sharp_bilinear.glsl  trapezoid_warp.glsl
shaders/hardware_simulation/: crt_color.glsl  lcd_subpixel.glsl  n64_color.glsl  n64_uv.glsl  oled_color.glsl  phosphor_green.glsl  ps1_color.glsl  ps1_uv.glsl  ps2_uv.glsl  ps3_color.glsl  (+6 more)
src/: config.rs  consts.rs  effect.rs  env.rs  interpose.rs  launcher.rs  lib.rs  logging.rs  main.rs  shader.rs  timing.rs  util.rs  watch.rs
(+136 files in other folders)
