[package]
name = "bones"
version = "1.0.0"
edition = "2021"
rust-version = "1.77"

[lib]
name = "bones"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[[bin]]
name = "bones"
path = "src/main.rs"

[dependencies]
libc = "0.2"
toml = "0.8"
ash = "0.37"
shaderc = "0.8"

[features]
shaderc-from-source = ["shaderc/build-from-source"]

[profile.release]
opt-level = 3
lto = "thin"
panic = "abort"
strip = true
